# gtk4Application

./: .gitignore  README.md  conda-lock.yml  meson.build  pyproject.toml
build-aux/: iconsbuild.py  nocompiler.py  pythonbuild.py  readtoml.py
data/: meson.build
data/icons/: meson.build
data/ui/: meson.build
src/: meson.build
